# http-server

./: CMakeLists.txt  README.md  example.cpp  http_server.hpp  main.cpp  web-server.h
api/: api.hpp
src/: api.hpp  connection-manager.hpp  connection.hpp  http-parser.hpp  include.hpp  jthread.hpp  logger.hpp  server.hpp
src/utils/: jthread.hpp  logger.hpp  thread_safe_queue.hpp
